--- a/public/locales/gr/translation.json
+++ b/public/locales/gr/translation.json
@@ -1,10 +1,39 @@
 
-{
-        "map": "Χάρτης",
-        "welcome": "Καλώς Ήρθατε",
-        "home": "Σπίτι",
-        "upload": "Ανέβασμα",
-        "login": "Σύνδεση",
-        "logout": "Αποσύνδεση"    
+{        
+        "index":{
+
+        "msg":"Εδώ είναι το Γεωγραφικό πλάτος και Γεωγραφικό μήκος από τη βάση δεδομένων",
+        "lat":"Γεωγραφικό πλάτος",
+        "lon":"Γεωγραφικό μήκος",
+        "please":"Παρακαλούμε συνδεθείτε χρησιμοποιώντας την κεφαλίδα"
+
+        }, 
+
+        
+        "heading":{
+                "heading":"Mongeese Χάρτης"
+        },
+        
+
+        "validation":{
+                "validator":"Το πεδίο είναι υποχρεωτικό"
+        },
+
+        "dynamicmap":{
+                "prompt":"Θέλετε να ενεργοποιήσετε τις υπηρεσίες τοποθεσίας;",
+                "erroruserlocation":"Σφάλμα κατά τη λήψη της τοποθεσίας χρήστη:",
+                "nosupport":"Ο γεωγραφικός εντοπισμός δεν υποστηρίζεται από το πρόγραμμα περιήγησής σας"
+
+        },
+        
+        "header":{
+
+                "map": "Χάρτης",
+                "welcome": "Καλώς Ήρθατε",
+                "home": "Σπίτι",
+                "upload": "Ανέβασμα",
+                "login": "Σύνδεση",
+                "logout": "Αποσύνδεση"
+        }    
 
 }       
