--- a/public/locales/gr/translation.json
+++ b/public/locales/gr/translation.json
@@ -25,7 +25,16 @@
                 "nosupport":"Ο γεωγραφικός εντοπισμός δεν υποστηρίζεται από το πρόγραμμα περιήγησής σας"
 
         },
-        
+
+        "AddLocationForm":{
+                "upload":"Ανεβάστε την τοποθεσία σας",
+                "city":"Πόλη",
+                "description": "Περιγραφή",
+                "uploadphoto": "Ανέβασμα φωτογραφίας",
+                "sumbit": "Υποβάλετε"
+
+        },
+
         "header":{
 
                 "map": "Χάρτης",
