Will integrate changes on Staging fixed manually as we found a complex fix with Theo

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -28,7 +28,7 @@
                 "city":"City",
                 "description": "Description",
                 "uploadphoto": "Upload Photo",
-                "sumbit": "Submit"
+                "submit": "Submit"
         },
 
         "header":{
