--- a/public/locales/gr/translation.json
+++ b/public/locales/gr/translation.json
@@ -31,7 +31,7 @@
                 "city":"Πόλη",
                 "description": "Περιγραφή",
                 "uploadphoto": "Ανέβασμα φωτογραφίας",
-                "sumbit": "Υποβάλετε"
+                "submit": "Υποβάλετε"
 
         },
 
