--- a/public/locales/gr/translation.json
+++ b/public/locales/gr/translation.json
@@ -1,10 +1,14 @@
 
 {        
         "index":{
-
-        "msg":"Εδώ είναι το Γεωγραφικό πλάτος και Γεωγραφικό μήκος από τη βάση δεδομένων",
+        "adminWelcome":"Καλώς ήρθατε Διαχειριστής",
+        "adminMsg":"Εδώ είναι το Γεωγραφικό πλάτος και Γεωγραφικό μήκος από τη βάση δεδομένων",
         "lat":"Γεωγραφικό πλάτος",
         "lon":"Γεωγραφικό μήκος",
+        "welcomeMsg":"Καλώς ήρθατε στον χάρτη Mongeese!",
+        "msg1":"Τώρα που έχετε συνδεθεί, μπορείτε να χρησιμοποιήσετε τη λειτουργία μεταφόρτωσης του ιστότοπού μας, επομένως μοιραστείτε τα αγαπημένα σας μέρη σε όλο τον κόσμο!",
+        "msg2":"Απλώς μεταβείτε στον χάρτη και δώστε άδεια να μοιραστείτε την τοποθεσία σας, ο ιστότοπός μας στη συνέχεια θα σας δείξει το γεωγραφικό πλάτος και γεωγραφικό μήκος.",
+        "msg3":"Μόλις τα αντιγράψετε, μπορείτε να κάνετε κλικ στο κουμπί Μεταφόρτωση και να τα επικολλήσετε εκεί μαζί με οποιαδήποτε πληροφορία και μια υπέροχη φωτογραφία που μπορείτε να μοιραστείτε!!",
         "please":"Παρακαλούμε συνδεθείτε χρησιμοποιώντας την κεφαλίδα"
 
         }, 
@@ -41,9 +45,18 @@
                 "map": "Χάρτης",
                 "welcome": "Καλώς Ήρθατε",
                 "home": "Σπίτι",
-                "upload": "Ανέβασμα",
+                "upload": "Μεταφόρτωση",
                 "login": "Σύνδεση",
                 "logout": "Αποσύνδεση"
-        }    
+        },
+        
+        "uploading":{
+                "sorry":"Η υποβολή απέτυχε, έχετε γράμματα εντός γεωγραφικού πλάτους ή γεωγραφικού μήκους!"
+        },
+
+        "languageSelector":{
+            "language":"Γλώσσα"
+        }
+        
 
 }       
