--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,9 +1,13 @@
 {
     "index":{
-
-            "msg":"Here is the Latitude and Longitude from the database",
+            "adminWelcome":"Welcome Admin",
+            "adminMsg":"Here is the Latitude and Longitude from the database",
             "lat":"Latitude",
             "lon":"Longitude",
+            "welcomeMsg":"Welcome to Mongeese Map!",
+            "msg1":"Now that you have logged in, you can use the upload function of our website so share your favorite places around the world!",
+            "msg2":"Simply go to the map and give permission to share your location, our website then will show you the latitude and longitude.",
+            "msg3":"Once you copy them, you can click the Upload button and paste them there along with any information and a great picture you can share!!",
             "please":"Please Log in using the Header"
 
     }, 
@@ -47,6 +51,14 @@
             "pnf":"Page not found",
             "bthp":"Back To Home Page"
 
+    },
+        
+    "uploading":{
+        "sorry":"Submittion Failed, You have letters inside Latitude or Longitude!"
+    },
+
+    "languageSelector":{
+        "language":"Language"
     }
     
 
