--- a/public/locales/gr/translation.json
+++ b/public/locales/gr/translation.json
@@ -49,7 +49,14 @@
                 "login": "Σύνδεση",
                 "logout": "Αποσύνδεση"
         },
-        
+
+        "page404":{
+
+                "pnf":"Η σελίδα δεν βρέθηκε",
+                "bthp":"Επιστροφή στην αρχική σελίδα"
+    
+        },
+
         "uploading":{
                 "sorry":"Η υποβολή απέτυχε, έχετε γράμματα εντός γεωγραφικού πλάτους ή γεωγραφικού μήκους!"
         },
