--- a/public/locales/gr/translation.json
+++ b/public/locales/gr/translation.json
@@ -5,6 +5,8 @@
         "adminMsg":"Εδώ είναι το Γεωγραφικό πλάτος και Γεωγραφικό μήκος από τη βάση δεδομένων",
         "lat":"Γεωγραφικό πλάτος",
         "lon":"Γεωγραφικό μήκος",
+        "delete":"Διαγραφή",
+        "update":"Επεξεργασία",
         "welcomeMsg":"Καλώς ήρθατε στον χάρτη Mongeese!",
         "msg1":"Τώρα που έχετε συνδεθεί, μπορείτε να χρησιμοποιήσετε τη λειτουργία μεταφόρτωσης του ιστότοπού μας, επομένως μοιραστείτε τα αγαπημένα σας μέρη σε όλο τον κόσμο!",
         "msg2":"Απλώς μεταβείτε στον χάρτη και δώστε άδεια να μοιραστείτε την τοποθεσία σας, ο ιστότοπός μας στη συνέχεια θα σας δείξει το γεωγραφικό πλάτος και γεωγραφικό μήκος.",
