--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,6 +4,8 @@
             "adminMsg":"Here is the Latitude and Longitude from the database",
             "lat":"Latitude",
             "lon":"Longitude",
+            "delete":"Delete",
+            "update":"Update",
             "welcomeMsg":"Welcome to Mongeese Map!",
             "msg1":"Now that you have logged in, you can use the upload function of our website so share your favorite places around the world!",
             "msg2":"Simply go to the map and give permission to share your location, our website then will show you the latitude and longitude.",
