--- a/public/locales/gr/translation.json
+++ b/public/locales/gr/translation.json
@@ -1,8 +1,8 @@
 
 {        
         "index":{
-        "adminWelcome":"Καλώς ήρθατε Διαχειριστής",
-        "adminMsg":"Εδώ είναι το Γεωγραφικό πλάτος και Γεωγραφικό μήκος από τη βάση δεδομένων",
+        "adminWelcome":"Καλώς ήρθατε Διαχειριστή",
+        "adminMsg":"Εδώ είναι οι εγγραφές από τη βάση δεδομένων",
         "lat":"Γεωγραφικό πλάτος",
         "lon":"Γεωγραφικό μήκος",
         "delete":"Διαγραφή",
