--- a/public/locales/gr/translation.json
+++ b/public/locales/gr/translation.json
@@ -49,7 +49,9 @@
                 "home": "Σπίτι",
                 "upload": "Μεταφόρτωση",
                 "login": "Σύνδεση",
-                "logout": "Αποσύνδεση"
+                "logout": "Αποσύνδεση",
+                "documentation":"Τεκμηρίωση",
+                "legal":"Νομικός"
         },
 
         "page404":{
@@ -65,7 +67,14 @@
 
         "languageSelector":{
             "language":"Γλώσσα"
+        },
+
+        "legal":{
+            "legalTitle":"Moongese - Νομικές Πληροφορίες",
+            "legalText":"Το λογισμικό που συνοδεύει και τροφοδοτεί αυτόν τον ιστότοπο περιλαμβάνει τα ακόλουθα στοιχεία ανοιχτού κώδικα, όλα κυκλοφορούν με τις ακόλουθες άδειες χρήσης:"
         }
+        
+    
         
 
 }       
