updated some translation

--- a/public/locales/gr/translation.json
+++ b/public/locales/gr/translation.json
@@ -8,10 +8,11 @@
         "delete":"Διαγραφή",
         "update":"Επεξεργασία",
         "welcomeMsg":"Καλώς ήρθατε στον χάρτη Mongeese!",
-        "msg1":"Τώρα που έχετε συνδεθεί, μπορείτε να χρησιμοποιήσετε τη λειτουργία μεταφόρτωσης του ιστότοπού μας, επομένως μοιραστείτε τα αγαπημένα σας μέρη σε όλο τον κόσμο!",
-        "msg2":"Απλώς μεταβείτε στον χάρτη και δώστε άδεια να μοιραστείτε την τοποθεσία σας, ο ιστότοπός μας στη συνέχεια θα σας δείξει το γεωγραφικό πλάτος και γεωγραφικό μήκος.",
-        "msg3":"Μόλις τα αντιγράψετε, μπορείτε να κάνετε κλικ στο κουμπί Μεταφόρτωση και να τα επικολλήσετε εκεί μαζί με οποιαδήποτε πληροφορία και μια υπέροχη φωτογραφία που μπορείτε να μοιραστείτε!!",
-        "please":"Παρακαλούμε συνδεθείτε χρησιμοποιώντας την κεφαλίδα"
+        "msg1":"Τώρα που έχετε συνδεθεί, δείτε τι μπορείτε να περιμένετε από κάθε σελίδα αυτού του ιστότοπου!",
+        "msg2":"Η Αρχική σελίδα είναι απλώς ένας τρόπος για να διαβάζετε και να εξοικειωθείτε με τον ιστότοπο! Θα προσφέρει τεκμηρίωση και τη γενική χρήση.",
+        "msg3":"Η σελίδα χάρτη είναι ο τρόπος σας για να αναζητήσετε όλες τις τοποθεσίες που δημοσιεύτηκαν σε όλο τον κόσμο και εάν αποδεχτείτε ότι κοινοποιείτε την τοποθεσία σας, ο χάρτης θα επικεντρωθεί σε εσάς και θα σας δείξει το γεωγραφικό πλάτος και το γεωγραφικό μήκος, ώστε να μπορείτε να αντιγράψετε και ανεβάστε τη δική σας τοποθεσία!",
+        "msg4":"Η σελίδα Μεταφόρτωση είναι όπου μπορείτε να ανεβάσετε μια τοποθεσία μόνοι σας! Με το γεωγραφικό πλάτος και το μήκος που πήρατε από τον χάρτη ή κάνατε αναζήτηση στο διαδίκτυο, μπορείτε να γράψετε το όνομα της πόλης, μια περιγραφή και να μας δώσετε μια ωραία εικόνα από το τηλέφωνό σας ή πρόγραμμα περιήγησης, και το μόνο που έχετε να κάνετε είναι να κάνετε κλικ στο sumbit! Αυτό θα στείλει την τοποθεσία στη βάση δεδομένων μας και θα επιτρέψει στον χάρτη να τη διαβάσει, ώστε οι άλλοι χρήστες να μπορούν να δουν τι δημοσιεύσατε!",
+        "please":"Παρακαλώ συνδεθείτε χρησιμοποιώντας την κεφαλίδα"
 
         }, 
 
@@ -51,7 +52,8 @@
                 "login": "Σύνδεση",
                 "logout": "Αποσύνδεση",
                 "documentation":"Τεκμηρίωση",
-                "legal":"Νομικός"
+                "legal":"Νομικός",
+                "GDPR":"Γ.Κ.Π.Δ"
         },
 
         "page404":{
@@ -70,8 +72,15 @@
         },
 
         "legal":{
-            "legalTitle":"Moongese - Νομικές Πληροφορίες",
-            "legalText":"Το λογισμικό που συνοδεύει και τροφοδοτεί αυτόν τον ιστότοπο περιλαμβάνει τα ακόλουθα στοιχεία ανοιχτού κώδικα, όλα κυκλοφορούν με τις ακόλουθες άδειες χρήσης:"
+                "legalTitle":"Moongeese Map - Δήλωση συμμόρφωσης Γ.Κ.Π.Δ",
+                "legalText1":"Το Mongeese Map δεσμεύεται να προστατεύει το απόρρητο και την ασφάλεια των προσωπικών σας πληροφοριών. Ως μέρος αυτής της δέσμευσης, θέλουμε να είμαστε διαφανείς σχετικά με τη χρήση των cookies και τα δεδομένα που συλλέγουμε όταν επισκέπτεστε τον ιστότοπό μας. ",
+                "legalText2":"Ο ιστότοπός μας χρησιμοποιεί cookies για να βελτιώσει την εμπειρία σας. Τα cookies είναι μικρά αρχεία κειμένου που τοποθετούνται στον υπολογιστή ή την κινητή συσκευή σας όταν περιηγείστε σε ιστότοπους. Αυτά τα cookie μας βοηθούν να αναλύσουμε την επισκεψιμότητα του ιστότοπου, να προσαρμόσουμε το περιεχόμενο και να βελτιώσουμε την εμπειρία χρήστη. Εμείς χρησιμοποιήστε cookies που παρέχονται από υπηρεσίες τρίτων, όπως το Google Analytics.",
+                "legalText3":"Χρησιμοποιούμε το Google Analytics, μια υπηρεσία ανάλυσης ιστού που παρέχεται από την Google, Inc. ('Google'). Το Google Analytics χρησιμοποιεί cookies για να μας βοηθήσει να αναλύσουμε τον τρόπο με τον οποίο οι χρήστες αλληλεπιδρούν με τον ιστότοπό μας. Οι πληροφορίες που δημιουργούνται από αυτά τα cookie (συμπεριλαμβανομένων των διεύθυνση IP) μεταδίδεται και αποθηκεύεται από την Google σε διακομιστές στις Ηνωμένες Πολιτείες. Η Google χρησιμοποιεί αυτές τις πληροφορίες για να αξιολογήσει τη χρήση του ιστότοπού μας, να συντάξει αναφορές σχετικά με τη δραστηριότητα ιστότοπου για τους χειριστές ιστότοπων και να παρέχει άλλες υπηρεσίες που σχετίζονται με τη δραστηριότητα του ιστότοπου και τη χρήση του Διαδικτύου. ",
+                "legalText4":"Χρησιμοποιώντας τον ιστότοπό μας, συναινείτε στην επεξεργασία δεδομένων σχετικά με εσάς από την Google με τον τρόπο που περιγράφεται στην Πολιτική Απορρήτου της Google και για τους σκοπούς που αναφέρονται παραπάνω. Μπορείτε να εξαιρεθείτε από το Google Analytics εάν απενεργοποιήσετε ή αρνηθείτε το cookie, απενεργοποιήστε το JavaScript ή χρησιμοποιήστε την υπηρεσία εξαίρεσης που παρέχεται από την Google.",
+                "legalText5":"Κάνοντας κλικ στο 'Να επιτρέπεται', συναινείτε στη συλλογή και χρήση cookies. Εάν δεν συμφωνείτε με αυτήν τη δήλωση, κάντε κλικ στο 'Απόρριψη' όταν σας ζητηθεί να ορίσετε τις προτιμήσεις σας για cookie.",
+                "legalText6":"Ενδέχεται να ενημερώσουμε αυτήν τη δήλωση συμμόρφωσης με τον Γ.Κ.Π.Δ για να αντικατοπτρίζει τις αλλαγές στις πρακτικές μας ή για άλλους λειτουργικούς, νομικούς ή ρυθμιστικούς λόγους. Τυχόν ενημερώσεις θα δημοσιεύονται σε αυτήν τη σελίδα.",
+                "legalText7":"Εάν έχετε οποιεσδήποτε ερωτήσεις σχετικά με τη δήλωση συμμόρφωσης με τον Γ.Κ.Π.Δ ή τα προσωπικά σας στοιχεία, επικοινωνήστε μαζί μας στο teamMongeese@solent.ac.uk.",
+                "legalText8":"Σας ευχαριστούμε που επισκεφτήκατε τον χάρτη Mongeese."
         }
         
     
