--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,9 +7,10 @@
             "delete":"Delete",
             "update":"Update",
             "welcomeMsg":"Welcome to Mongeese Map!",
-            "msg1":"Now that you have logged in, you can use the upload function of our website so share your favorite places around the world!",
-            "msg2":"Simply go to the map and give permission to share your location, our website then will show you the latitude and longitude.",
-            "msg3":"Once you copy them, you can click the Upload button and paste them there along with any information and a great picture you can share!!",
+            "msg1":"Now that you have logged in, here is what you can expect from each page of this website!",
+            "msg2":"The Home Page is simply a way for you to read up and get accustumed to the website! It will offer documentation and the general usage.",
+            "msg3":"The Map page is your way of looking up all the locations that were posted around the world, and should you accept you share your location, the map will center on you and show you the latitude and longitude so you can copy them and upload your own location!",
+            "msg4":"The Upload page is where you can upload a location yourself! With the latitude and longitude you got from the map or searched online, you can write the city name, a description, and give us a nice picture from your phone or browser, and all you have to do is click sumbit! This will send the location to our database, and allow the map to read it so other users can have a look at what you posted!",
             "please":"Please Log in using the Header"
 
     }, 
@@ -47,7 +48,7 @@
             "login": "Login",
             "logout": "Logout",
             "documentation":"Documentation",
-            "GDPR":"GDPR"
+            "GDPR":"G.D.P.R"
     },
 
     "page404":{
